crates/runtime/src/tests/snapshots/query_select_all_exclude_rename_join.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT\n  employee_table.* EXCLUDE department_id,\n  department_table.* RENAME department_name AS department\nFROM employee_table INNER JOIN department_table\n  ON employee_table.department_id = department_table.department_id\nORDER BY department, last_name, first_name;\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                QualifiedWildcard(
                                    ObjectName(
                                        [
                                            Ident {
                                                value: "employee_table",
                                                quote_style: None,
                                                span: Span(Location(0,0)..Location(0,0)),
                                            },
                                        ],
                                    ),
                                    WildcardAdditionalOptions {
                                        wildcard_token: TokenWithSpan {
                                            token: Mul,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                        opt_ilike: None,
                                        opt_exclude: Some(
                                            Single(
                                                Ident {
                                                    value: "department_id",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ),
                                        ),
                                        opt_except: None,
                                        opt_replace: None,
                                        opt_rename: None,
                                    },
                                ),
                                QualifiedWildcard(
                                    ObjectName(
                                        [
                                            Ident {
                                                value: "department_table",
                                                quote_style: None,
                                                span: Span(Location(0,0)..Location(0,0)),
                                            },
                                        ],
                                    ),
                                    WildcardAdditionalOptions {
                                        wildcard_token: TokenWithSpan {
                                            token: Mul,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                        opt_ilike: None,
                                        opt_exclude: None,
                                        opt_except: None,
                                        opt_replace: None,
                                        opt_rename: Some(
                                            Single(
                                                IdentWithAlias {
                                                    ident: Ident {
                                                        value: "department_name",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                    alias: Ident {
                                                        value: "department",
                                                        quote_style: None,
                                                        span: Span(Location(0,0)..Location(0,0)),
                                                    },
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            into: None,
                            from: [
                                TableWithJoins {
                                    relation: Table {
                                        name: ObjectName(
                                            [
                                                Ident {
                                                    value: "employee_table",
                                                    quote_style: None,
                                                    span: Span(Location(0,0)..Location(0,0)),
                                                },
                                            ],
                                        ),
                                        alias: None,
                                        args: None,
                                        with_hints: [],
                                        version: None,
                                        with_ordinality: false,
                                        partitions: [],
                                        json_path: None,
                                    },
                                    joins: [
                                        Join {
                                            relation: Table {
                                                name: ObjectName(
                                                    [
                                                        Ident {
                                                            value: "department_table",
                                                            quote_style: None,
                                                            span: Span(Location(0,0)..Location(0,0)),
                                                        },
                                                    ],
                                                ),
                                                alias: None,
                                                args: None,
                                                with_hints: [],
                                                version: None,
                                                with_ordinality: false,
                                                partitions: [],
                                                json_path: None,
                                            },
                                            global: false,
                                            join_operator: Inner(
                                                On(
                                                    BinaryOp {
                                                        left: CompoundIdentifier(
                                                            [
                                                                Ident {
                                                                    value: "employee_table",
                                                                    quote_style: None,
                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                },
                                                                Ident {
                                                                    value: "department_id",
                                                                    quote_style: None,
                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                },
                                                            ],
                                                        ),
                                                        op: Eq,
                                                        right: CompoundIdentifier(
                                                            [
                                                                Ident {
                                                                    value: "department_table",
                                                                    quote_style: None,
                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                },
                                                                Ident {
                                                                    value: "department_id",
                                                                    quote_style: None,
                                                                    span: Span(Location(0,0)..Location(0,0)),
                                                                },
                                                            ],
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                    ],
                                },
                            ],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: Some(
                        OrderBy {
                            exprs: [
                                OrderByExpr {
                                    expr: Identifier(
                                        Ident {
                                            value: "department",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                    asc: None,
                                    nulls_first: None,
                                    with_fill: None,
                                },
                                OrderByExpr {
                                    expr: Identifier(
                                        Ident {
                                            value: "last_name",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                    asc: None,
                                    nulls_first: None,
                                    with_fill: None,
                                },
                                OrderByExpr {
                                    expr: Identifier(
                                        Ident {
                                            value: "first_name",
                                            quote_style: None,
                                            span: Span(Location(0,0)..Location(0,0)),
                                        },
                                    ),
                                    asc: None,
                                    nulls_first: None,
                                    with_fill: None,
                                },
                            ],
                            interpolate: None,
                        },
                    ),
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Err(
        NotImplemented(
            "wildcard * with RENAME not supported ",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
